--- a/action.yml
+++ b/action.yml
@@ -7,20 +7,41 @@ inputs:
   project-path:
     description: Path of project (.csproj)
     default: ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj
+  publish-path:
+    description: Path to output in Publish step
+    default: _out
   main-repo:
     description: Set to true only when running this action from the default GitHub Pages repository ({ID}.github.io).
     default: false
+outputs:
+  wwwroot-path:
+    description: Path of wwwroot
+    value: ${{ steps.wwwroot-output.outputs.wwwroot }}
 runs:
   using: composite
   steps:
-    - run: dotnet restore ${{ inputs.project-path }}
+    - name: Restore dependencies
+      run: dotnet restore ${{ inputs.project-path }}
       shell: bash
-    - run: dotnet build ${{ inputs.project-path }} --no-restore -c Release
+
+    - name: Build
+      run: dotnet build ${{ inputs.project-path }} --no-restore -c Release
       shell: bash
-    - run: dotnet publish ${{ inputs.project-path }} --no-build -c Release -o _out
+
+    - name: Publish
+      run: dotnet publish ${{ inputs.project-path }} --no-build -c Release -o ${{ inputs.publish-path }}
       shell: bash
-    - run: sed -i 's/base href="\/"/base href="\/${{ github.event.repository.name }}\/"/g' _out/wwwroot/index.html
+
+    - name: wwwroot-path output
+      id: wwwroot-output
+      run: echo "wwwroot=$(echo ${{ inputs.publish-path }}/wwwroot)" >> $GITHUB_OUTPUT
       shell: bash
+
+    - name: Modify index.html for this repository
       if: ${{ inputs.main-repo == 'false' }}
-    - run: touch _out/wwwroot/.nojekyll
+      run: sed -i 's/base href="\/"/base href="\/${{ github.event.repository.name }}\/"/g' ${{ steps.wwwroot-output.outputs.wwwroot }}/index.html
+      shell: bash
+
+    - name: Create .nojekyll
+      run: touch ${{ steps.wwwroot-output.outputs.wwwroot }}/.nojekyll
       shell: bash
