--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
     branches: ["main"]
 
 jobs:
-  test-non-main-repo:
+  test-non-main-repo-fix-404:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -22,9 +22,9 @@ jobs:
           project-path: Test/Test.csproj
           main-repo: false
       - name: Verify
-        run: Test/Verify.sh --non-main-repo ${{ github.event.repository.name }}
+        run: Test/Verify.sh --non-main-repo --fix-404 ${{ github.event.repository.name }}
 
-  test-main-repo:
+  test-main-repo-fix-404:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -39,4 +39,38 @@ jobs:
           project-path: Test/Test.csproj
           main-repo: true
       - name: Verify
-        run: Test/Verify.sh --main-repo ${{ github.event.repository.name }}
+        run: Test/Verify.sh --main-repo --fix-404 ${{ github.event.repository.name }}
+
+  test-non-main-repo-no-fix-404:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: GitHub Pages Blazor WASM
+        uses: ./
+        with:
+          project-path: Test/Test.csproj
+          main-repo: false
+      - name: Verify
+        run: Test/Verify.sh --non-main-repo --no-fix-404 ${{ github.event.repository.name }}
+
+  test-main-repo-no-fix-404:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: GitHub Pages Blazor WASM
+        uses: ./
+        with:
+          project-path: Test/Test.csproj
+          main-repo: true
+      - name: Verify
+        run: Test/Verify.sh --main-repo --no-fix-404 ${{ github.event.repository.name }}
