--- a/Bluehill.Blazor.GHPages/Bluehill.Blazor.GHPages.csproj
+++ b/Bluehill.Blazor.GHPages/Bluehill.Blazor.GHPages.csproj
@@ -10,4 +10,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly"/>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 </Project>
