--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,8 +5,8 @@
     <FileVersion>1.0.0</FileVersion>
     <Version>1.0</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/na1307/Bluehill.Blazor.GHPages</RepositoryUrl>
-    <NoWarn>$(NoWarn)</NoWarn>
     <StaticWebAssetBasePath Condition="$(StaticWebAssetBasePath) == ''">/</StaticWebAssetBasePath>
   </PropertyGroup>
 </Project>
