--- a/.github/workflows/test-core.yml
+++ b/.github/workflows/test-core.yml
@@ -2,13 +2,13 @@ name: Test Core
 
 on:
   workflow_call:
-    inputs:
-      main-repo:
-        required: true
-        type: boolean
-      fix-404:
-        required: true
-        type: boolean
+    #inputs:
+      #main-repo:
+        #required: true
+        #type: boolean
+      #fix-404:
+        #required: true
+        #type: boolean
 
 jobs:
   test:
@@ -24,7 +24,8 @@ jobs:
         uses: ./
         with:
           project-path: Test/Test.csproj
-          main-repo: ${{ inputs.main-repo }}
-          fix-404: ${{ inputs.fix-404 }}
+          #main-repo: ${{ inputs.main-repo }}
+          #fix-404: ${{ inputs.fix-404 }}
       - name: Verify
-        run: Test/Verify.sh --main-repo=${{ inputs.main-repo }} --fix-404=${{ inputs.fix-404 }} ${{ github.event.repository.name }}
+        #run: Test/Verify.sh --main-repo=${{ inputs.main-repo }} --fix-404=${{ inputs.fix-404 }} ${{ github.event.repository.name }}
+        run: Test/Verify.sh ${{ github.event.repository.name }}
