--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,26 +7,29 @@ on:
     branches: ["main"]
 
 jobs:
-  test-non-main-repo-fix-404:
-    uses: ./.github/workflows/test-core.yml
-    with:
-      main-repo: false
-      fix-404: true
+  #test-non-main-repo-fix-404:
+    #uses: ./.github/workflows/test-core.yml
+    #with:
+      #main-repo: false
+      #fix-404: true
 
-  test-main-repo-fix-404:
-    uses: ./.github/workflows/test-core.yml
-    with:
-      main-repo: true
-      fix-404: true
+  #test-main-repo-fix-404:
+    #uses: ./.github/workflows/test-core.yml
+    #with:
+      #main-repo: true
+      #fix-404: true
 
-  test-non-main-repo-no-fix-404:
-    uses: ./.github/workflows/test-core.yml
-    with:
-      main-repo: false
-      fix-404: false
+  #test-non-main-repo-no-fix-404:
+    #uses: ./.github/workflows/test-core.yml
+    #with:
+      #main-repo: false
+      #fix-404: false
 
-  test-main-repo-no-fix-404:
+  #test-main-repo-no-fix-404:
+    #uses: ./.github/workflows/test-core.yml
+    #with:
+      #main-repo: true
+      #fix-404: false
+
+  test:
     uses: ./.github/workflows/test-core.yml
-    with:
-      main-repo: true
-      fix-404: false
