--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
@@ -25,7 +27,12 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Run Jest Tests
-        run: npm run ci-test
+        run: npm run ci-test --coverage
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   test-action:
     name: GitHub Actions Test
