--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ci-test": "jest",
     "package": "ncc build src/index.ts -o dist --source-map --license licenses.txt",
     "package:watch": "npm run package -- --watch",
+    "sonarscanner": "sonar-scanner",
     "test": "jest"
   },
   "license": "MIT",
@@ -70,6 +71,7 @@
     "@types/node": "^20.17.10",
     "@vercel/ncc": "^0.38.3",
     "jest": "^29.7.0",
+    "sonarqube-scanner": "^4.2.6",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
   }
