--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
+sonar.host.url=https://sonarcloud.io
 sonar.projectKey=na1307_blazor-github-pages
 sonar.organization=na1307
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
@@ -8,7 +9,8 @@ sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=src
+sonar.tests=tests
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
