--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=src
-sonar.tests=tests
+sonar.tests=__tests__
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
