--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
     ignore:
       - dependency-name: "@types/node"
         update-types:
-          - "semver:major"
+          - "version-update:semver-major"
 
   - package-ecosystem: dotnet-sdk
     directory: /
