--- a/Bluehill.Blazor.GHPages/Bluehill.Blazor.GHPages.csproj
+++ b/Bluehill.Blazor.GHPages/Bluehill.Blazor.GHPages.csproj
@@ -3,6 +3,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+    <AssemblyVersion>1</AssemblyVersion>
+    <FileVersion>1.0.1</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
   <ItemGroup>
     <SupportedPlatform Include="browser"/>
