--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -30,20 +30,23 @@ jobs:
         id: checkout
         uses: actions/checkout@v5
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
       - name: Setup Node.js
         id: setup-node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v5
         with:
           node-version-file: .node-version
-          cache: npm
+          cache: pnpm
 
       - name: Install Dependencies
         id: install
-        run: npm ci
+        run: pnpm i
 
       - name: Build dist/ Directory
         id: build
-        run: npm run bundle
+        run: pnpm bundle
 
       # This will fail the workflow if the `dist/` directory is different than
       # expected.
