--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,19 +15,21 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
       - name: Setup .NET
-        uses: actions/setup-dotnet@v4
+        uses: actions/setup-dotnet@v5
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v5
         with:
           node-version-file: .node-version
-          cache: npm
+          cache: pnpm
       - name: Install Dependencies
-        run: npm ci
+        run: pnpm i
       - name: Run Jest Tests
-        run: npm run ci-test --coverage
+        run: pnpm ci-test --coverage
       - name: SonarCloud
-        run: npm run sonarscanner -- -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+        run: pnpm sonarscanner -- -Dsonar.token=${{ secrets.SONAR_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -39,7 +41,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
       - name: Setup .NET
-        uses: actions/setup-dotnet@v4
+        uses: actions/setup-dotnet@v5
       - name: GitHub Pages Blazor WASM
         uses: ./
         with:
