--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "node": ">=24"
   },
   "scripts": {
-    "bundle": "npm run package",
+    "bundle": "pnpm package",
     "ci-test": "jest",
     "package": "ncc build src/index.ts -o dist --source-map --license licenses.txt",
-    "package:watch": "npm run package -- --watch",
+    "package:watch": "pnpm package -- --watch",
     "sonarscanner": "sonar-scanner",
     "test": "jest"
   },
@@ -68,11 +68,12 @@
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.5.2",
+    "@types/node": "^24.6.2",
     "@vercel/ncc": "^0.38.4",
-    "jest": "^30.1.3",
-    "sonarqube-scanner": "^4.3.1",
+    "jest": "^30.2.0",
+    "sonarqube-scanner": "^4.3.2",
     "ts-jest": "^29.4.4",
-    "typescript": "^5.9.2"
-  }
+    "typescript": "^5.9.3"
+  },
+  "packageManager": "pnpm@10.18.0"
 }
