--- a/package.json
+++ b/package.json
@@ -32,12 +32,18 @@
     "package:watch": "pnpm package -- --watch",
     "sonar": "sonar",
     "test": "vitest",
-    "ci-test": "vitest"
+    "ci-test": "vitest",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write \"**/*.ts\""
   },
   "devDependencies": {
     "@sonar/scan": "^4.3.2",
     "@types/node": "^24.9.1",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "^3.6.2",
     "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.2",
     "vite": "^7.1.11",
     "vitest": "^4.0.1"
   },
