--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,8 @@ jobs:
           cache: pnpm
       - name: Install Dependencies
         run: pnpm i
-      #- name: Run Jest Tests
-      #  run: pnpm ci-test --coverage
+      - name: Run Vitest Tests
+        run: pnpm ci-test --coverage
       - name: SonarCloud
         run: pnpm sonar
         env:
