--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "package": "tsc && vite build",
     "package:watch": "pnpm package -- --watch",
     "sonar": "sonar",
-    "test": "vitest",
-    "ci-test": "vitest",
+    "test": "vitest watch",
+    "ci-test": "vitest run",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"**/*.ts\""
   },
   "devDependencies": {
     "@sonar/scan": "^4.3.2",
     "@types/node": "^24.9.1",
+    "@vitest/coverage-v8": "4.0.1",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
