--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.host.url=https://sonarcloud.io
 sonar.projectKey=na1307_blazor-github-pages
 sonar.organization=na1307
-#sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=blazor-github-pages
